[package]
name = "indentasy"
version = "0.2.0"
edition = "2021"
description = "Indent like a party"
license = "MIT"
repository = "https://github.com/haoadoresorange/indentasy.git"
author = "haoadoresorange"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html